--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: services@cygnyx.com
 description: > # this means to ignore newlines until "baseurl:"
   cygnyx is a contraction of CYGnus and oNYX.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://cygnyx.com" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://cygnyx.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
 github_username:  cygnyx
 rss: RSS
