--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ rss: RSS
 # Build settings
 markdown: kramdown
 theme: minima
-gems:
+plugins:
   - jekyll-feed
   - jekyll-sitemap
   - jekyll-seo-tag
